frontend/mongo-web-shell.css
.mongo-web-shell {
  border-radius: 10px;
  height: 30em;
  padding: 8px 16px;
}

.mongo-web-shell, .mongo-web-shell * {
  background-color: #000000;
  color: #00e500;
  font-size: 15px;
}

.mongo-web-shell p {
  padding: 0;
  margin: 0;
}

.mws-response-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  overflow-y: auto;
  word-wrap: break-word;
}

.mws-response-list li {
  margin: 3px 0;
}

.mws-form {
  display: inline-block;
  margin-left: 1ex; /* Space before the PS1 */
  width: 95%; /* TODO: This doesn't fill the space properly. */
}

.mws-input {
  border: none;
  width: 95%;
  padding: 0;
  margin: 0;
}

.mws-input:focus {
  outline: none;
}

